# ClawdSecbot

./: .dockerignore  .gitignore  .metadata  README.md  README_zh-CN.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: issue-auto-comment.yml  linux-build.yml  macos-build.yml  windows-build.yml
_rules/: audit_chain.md  config_system.md  export_task.md  global.md  setting_task.md  ui_non_blocking_async.md
android/: local.properties
assets/lucide_icons/: pubspec.yaml
go_lib/: go.mod  go.sum  main.go
go_lib/chatmodel-routing/: filter.go  proxy.go  proxy_response_render_test.go
go_lib/core/: asset.go  asset_test.go  collector.go  collector_darwin.go  collector_linux.go  collector_proc.go  collector_proc_test.go  collector_test.go  collector_windows.go  engine.go  engine_test.go  ffi.go  path_manager.go  plugin.go  plugin_capabilities.go  plugin_capabilities_test.go  plugin_manager.go  plugin_manager_test.go  risk.go  vulnerability.go  vulnerability_test.go
go_lib/core/sandbox/linux_hook/: CMakeLists.txt  preload.c
go_lib/core/sandbox/windows_hook/: CMakeLists.txt  hooks.c  policy.c  policy.h
go_lib/skillagent/: adk_adapter.go  agent.go  options.go  usage.go  usage_test.go
ios/Flutter/: Generated.xcconfig  (+1 more)
lib/: constants.dart  main.dart  main_web.dart
linux/: CMakeLists.txt
mds/: audit_log_aggregation_technical_plan_zh-CN.md  container_webui_deploy_guide_zh-CN.md  flutter_web_api_unused_functions.txt  flutter_web_api_used_functions.txt  flutter_web_technical_plan_zh-CN.md  plugin_development_incremental.md  plugin_sdk_incremental_guide.md  product_features_guide_en.md  product_features_guide_zh-CN.md  shepherdgate_actual_implementation_technical_design_zh-CN.md  shepherdgate_parallel_instruction_isolation_plan_zh-CN.md  shepherdgate_refactor_technical_plan_zh-CN.md  version_upgrade_migration_en.md  version_upgrade_migration_zh-CN.md
scripts/: README.md  build_linux_release.sh  build_macos_release_new.sh  build_windows_release.ps1  run_web_with_pprof.sh  run_with_pprof.ps1  run_with_pprof.sh
test/: scan_result_risk_text_test.dart  security_event_labels_test.dart  widget_test.dart
web/: index.html  manifest.json
(+440 files in other folders)
